--- a/carts.html
+++ b/carts.html
@@ -10,33 +10,36 @@
     <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
 </head>
 <body>
-    <header>
-
-        <nav class="navbar navbar-expand-lg bg-secondary d-flex">
-            <img class=" col-lg-2 col-md-2 ms-5" src="./assets/images/logo.png" alt="">
-            <div class="container-fluid">
-              <div class="collapse navbar-collapse justify-content-end me-5" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
+  <header>
+    <nav class="navbar navbar-expand-md bg-secondary">
+        <div class="container-fluid">
+            <img class="col-5 col-sm-4 col-lg-2 col-md-2 ms-2" src="./assets/images/logo.png" alt="">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                <li class="nav-item">
                     <a class="btn boton me-4" aria-current="page" href="./index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
+                </li>
+                <li class="nav-item">
                     <a class="btn boton me-4" href="./upcoming.html">Upcoming Events</a>
-                  </li>
-                  <li class="nav-item">
+                </li>
+                <li class="nav-item">
                     <a class="btn boton me-4" href="./past.html">Past Events</a>
-                  </li>
-                  <li class="nav-item">
+                </li>
+                <li class="nav-item">
                     <a class="btn boton me-4" href="./contact.html">Contact</a>
-                  </li>
-                  <li class="nav-item">
+                </li>
+                <li class="nav-item">
                     <a class="btn boton me-4" href="./stats.html">Stats</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
+                </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+</header>
     <main class="bg-danger-subtle d-flex justify-content-center">
 
         <div class="d-flex justify-content-center align-items-center pt-5" >
