--- a/contact.html
+++ b/contact.html
@@ -14,50 +14,53 @@
 
 <body>
   <header>
-
-    <nav class="navbar navbar-expand-lg bg-secondary d-flex">
-      <img class=" col-lg-2 col-md-2 ms-5" src="./assets/images/logo.png" alt="">
-      <div class="container-fluid">
-        <div class="collapse navbar-collapse justify-content-end me-5" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="btn boton me-4" aria-current="page" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="btn boton me-4" href="./upcoming.html">Upcoming Events</a>
-            </li>
-            <li class="nav-item">
-              <a class="btn boton me-4" href="./past.html">Past Events</a>
-            </li>
-            <li class="nav-item">
-              <a class="btn boton me-4" href="#">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="btn boton me-4" href="./stats.html">Stats</a>
-            </li>
-          </ul>
+    <nav class="navbar navbar-expand-md bg-secondary">
+        <div class="container-fluid">
+            <img class="col-5 col-sm-4 col-lg-2 col-md-2 ms-2" src="./assets/images/logo.png" alt="">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                <li class="nav-item">
+                    <a class="btn boton me-4" aria-current="page" href="./index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn boton me-4" href="./upcoming.html">Upcoming Events</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn boton me-4" href="./past.html">Past Events</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn boton me-4" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn boton me-4" href="./stats.html">Stats</a>
+                </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-  </header>
+      </nav>
+</header>
   <main class="bg-danger-subtle">
     <div id="carouselExampleCaptions" class="carousel slide border-5 border-bottom border-dark">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="./assets/images/books.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h1 class="pb-4">Contact us</h1>
           </div>
         </div>
         <div class="carousel-item">
           <img src="./assets/images/Cine7.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h1 class="pb-4">Contact us</h1>
           </div>
         </div>
         <div class="carousel-item">
           <img src="./assets/images/Concierto de musica1.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h1 class="pb-4">Contact us</h1>
           </div>
         </div>
