--- a/index.html
+++ b/index.html
@@ -14,50 +14,53 @@
 
 <body>
     <header>
-
-        <nav class="navbar navbar-expand-lg bg-secondary d-flex ">
-            <img class=" col-lg-2 col-md-2 ms-5" src="./assets/images/logo.png" alt="">
+        <nav class="navbar navbar-expand-md bg-secondary">
             <div class="container-fluid">
-                <div class="collapse navbar-collapse justify-content-end me-5" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="btn boton me-4" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn boton me-4" href="./upcoming.html">Upcoming Events</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn boton me-4" href="./past.html">Past Events</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn boton me-4" href="./contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn boton me-4" href="./stats.html">Stats</a>
-                        </li>
-                    </ul>
-                </div>
+                <img class="col-5 col-sm-4 col-lg-2 col-md-2 ms-2" src="./assets/images/logo.png" alt="">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                    <li class="nav-item">
+                        <a class="btn boton me-4" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn boton me-4" href="./upcoming.html">Upcoming Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn boton me-4" href="./past.html">Past Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn boton me-4" href="./contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn boton me-4" href="./stats.html">Stats</a>
+                    </li>
+                </ul>
+              </div>
             </div>
-        </nav>
+          </nav>
     </header>
     <main class="bg-danger-subtle">
         <div id="carouselExampleCaptions" class="carousel slide border-5 border-bottom border-dark">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="./assets/images/books.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-md-block">
                         <h1 class="pb-4">Home</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/images/Cine7.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-md-block">
                         <h1 class="pb-4">Home</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/images/Concierto de musica1.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-md-block">
                         <h1 class="pb-4">Home</h1>
                     </div>
                 </div>
@@ -75,7 +78,7 @@
         </div>
         <div class="d-flex align-items-center justify-content-between pt-4 ">
             <div>
-                <div class="form-check form-check-inline ms-5 ">
+                <div class="form-check form-check-inline ms-2 ">
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
                     <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
                 </div>
@@ -96,14 +99,14 @@
                     <label class="form-check-label" for="inlineCheckbox1">Others</label>
                 </div>
             </div>
-            <form class="d-flex me-5" role="search">
+            <form class="d-flex me-3" role="search">
                 <input class="form-check-inline me-2" type="search" placeholder="Search" aria-label="Search">
                 <button type="button" class="btn btn-dark">Search</button>
             </form>
         </div>
-        <div class="d-flex mt-5 justify-content-evenly pb-5">
+        <div class="d-flex mt-5 justify-content-evenly pb-5 flex-wrap gap-3 mx-2">
             <div class="card" style="width: 18rem;">
-                <img src="./assets/images/Feria de comidas7.jpg" class="card-img-top" alt="...">
+                <img src="./assets/images/Feria de comidas7.jpg" class="card-img-top " alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Festival of the collectivities</h5>
                     <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the
